Fix: Overlapping of buttons on mat-card-header
(cherry picked from commit a61716a9180d29c21c291a96885e2bfda487b661)

--- a/gravitee-apim-console-webui/src/management/clusters/details/user-permissions/cluster-user-permissions.component.scss
+++ b/gravitee-apim-console-webui/src/management/clusters/details/user-permissions/cluster-user-permissions.component.scss
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    min-width: max-content;
 
     &__actions {
       display: flex;
